implemented functions for restore password
