# handler/router.go
@@ -30,6 +30,7 @@ func (h *Handler) InitRoutes() *gin.Engine {
 	{
 		userNoAuth.POST("/login", h.authUser)
 		userNoAuth.POST("/customer", h.createCustomer)
+		userNoAuth.POST("/restore", h.restorePassword)
 	}
 
 	userAuth := router.Group("/users")
